feat: Add Google Drive integration for backup and restore functionality
- Introduced Google Drive API client for OAuth 2.0 integration.
- Added configuration template for Google OAuth Client ID.
- Implemented backup and restore features using Google Drive.
- Enhanced settings view to manage Google OAuth Client ID and connection status.
- Added methods to load and check for backups in Google Drive.
- Updated build script to generate configuration file from environment variables.
- Removed File System Access API dependency for backup functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+# Build output
 /public/
+
+# Dependencies
 /node_modules/
+
+# Environment variables
+.env
+.env.local
+
+# Generated config (created during build)
+/js/config.js
