--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,13 +3,23 @@
   "tasks": [
     {
       "label": "npm: dev",
-      "type": "shell",
-      "command": "npm run dev",
+      "type": "npm",
+      "script": "dev",
       "isBackground": true,
-      "problemMatcher": [],
+      "problemMatcher": {
+        "owner": "custom",
+        "pattern": {
+          "regexp": "^$"
+        },
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "^.*Serving.*",
+          "endsPattern": "^.*Ready for changes.*"
+        }
+      },
       "presentation": {
         "reveal": "always",
-        "panel": "dedicated"
+        "panel": "new"
       }
     }
   ]
