--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chokidar": "^3.5.3",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
     "esbuild": "^0.19.6",
     "live-server": "^1.2.2"
   }
